<resources>
    <string name="app_name">Nagaon High School</string>
    <string name="nagaon_govt_boys">Nagaon Govt Boys\' Higher Secondary School</string>
    <string name="principal_head">Dipika Laskar</string>
    <string name="message">Nagaon Govt. Boys\' H.S.School was established on 17th Nov.1865. It is proud privilige for me to serve as a Principal of this esteemed institution. As Principal ,my goal is to inspire staff,  parents and community to work together to provide education for all round development of students.I look forward to the opportunity to empower our students to reach a great success.It is a matter of pride for us that our staff have involved and successfully implemented a system for educational development of our school. Keeping this in mind, our school family continues to remain committed to achieve both our vision and mission. And I am sure  the school will reach greater height in the years to come
   We believe ,our educational app will provide necessary learning materials to students in true manner</string>
    <string name="class_6">Class 6</string>
    <string name="class_7">Class 7</string>
    <string name="class_8">Class 8</string>
    <string name="class_9">Class 9</string>
    <string name="class_10">Class 10</string>
    <string name="class_11">Class 11</string>
    <string name="assamese">Assamese</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="maths">Maths</string>
    <string name="class_ngbhs">Class NGBHS</string>
    <string name="welcome_to_ngbhs">Welcome to NGBHS</string>
    <string name="class_12">Class 12</string>
    <string name="get_ready_for_new_way_of_learning_class_6">Get Ready For Class 6</string>
    <string name="get_ready_class_11">Get Ready For Class 11</string>
    <string name="get_ready_class_10">Get Ready For Class 10</string>
    <string name="get_ready_for_class_7">Get Ready For Class 7</string>
    <string name="get_ready_class_8">Get Ready For Class 8</string>
    <string name="get_ready_class_9">Get Ready For Class 9</string>
    <string name="get_ready_class_12">Get Ready For Class 12</string>
    <string name="science">Science</string>
    <string name="social_science">Social Science</string>
    <string name="advanced_maths">Advanced Maths</string>
    <string name="geography">Geography</string>
    <string name="information_tech">Information Tech</string>
    <string name="retail">Retail</string>
    <string name="sanskrit">Sanskrit</string>
    <string name="arts">Arts</string>
    <string name="commerce">Commerce</string>
    <string name="history">History</string>
    <string name="education">Education</string>
    <string name="political_science">Political Science</string>
    <string name="logic_philosophy"><![CDATA[Logic & Philosophy]]></string>
    <string name="economics">Economics</string>
    <string name="get_ready_for_study_arts">Get Ready For Arts</string>
    <string name="wel_arts_11">Welcome To Class 11 Arts</string>
    <string name="get_ready_for_science">Get Ready For Science</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="biology">Biology</string>
    <string name="class_12_arts">Welcome to Class 12 arts</string>
    <string name="wel_science_12">Welcome to Class 12 Science</string>
    <string name="wel_science_11">Welcome to Class 11 Science</string>
    <string name="get_ready_for_commerce">Get Ready For Commerce</string>
    <string name="wel_comm_11">Welcome to Class 11 Commerce</string>
    <string name="wel_12_comm">Welcome to Class 12 Commerce</string>
    <string name="accountancy">Accountancy</string>
    <string name="business_studies">Business Studies</string>
    <string name="alternate_english">Alternate English</string>
</resources>