<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nagaon_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:gravity="center_horizontal"
        android:text="@string/nagaon_govt_boys"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/principal_logo"
        android:layout_width="140dp"
        android:layout_height="156dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/princiapl_logo"
        app:layout_constraintEnd_toEndOf="@+id/nagaon_header"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/nagaon_header"
        app:layout_constraintTop_toBottomOf="@+id/nagaon_header" />

    <TextView
        android:id="@+id/principal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/principal_head"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/nagaon_header"
        app:layout_constraintStart_toStartOf="@+id/nagaon_header"
        app:layout_constraintTop_toBottomOf="@+id/principal_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:text="@string/message"
        android:textAlignment="center"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="@+id/nagaon_header"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/principal_name" />


</androidx.constraintlayout.widget.ConstraintLayout>